tests/ui/binop/binary-op-suggest-deref.stderr
error[E0308]: mismatched types
  --> $DIR/binary-op-suggest-deref.rs:6:12
   |
LL |     if i < 0 {}
   |            ^ expected `&i64`, found integer
   |
help: consider dereferencing the borrow
   |
LL |     if *i < 0 {}
   |        +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
